161005: split 01-op-06-coll into two files

--- a/161005/161005.tex
+++ b/161005/161005.tex
@@ -36,6 +36,7 @@
 \input{01-op-03-comp}
 \input{01-op-04-inher}
 \input{01-op-05-func}
-\input{01-op-06-coll}
+\input{02-coll-01-dict}
+\input{02-coll-02-iter}
 
 \end{document}
