Add cmap package

--- a/160921/160921.tex
+++ b/160921/160921.tex
@@ -5,6 +5,7 @@
 \usepackage[english,russian]{babel}
 %\usepackage{tikz-uml}
 \usepackage{minted}
+\usepackage{cmap}
 
 \mode<presentation>{
 	\usetheme{CambridgeUS}
