--- a/161005/161005.tex
+++ b/161005/161005.tex
@@ -5,6 +5,7 @@
 \usepackage[english,russian]{babel}
 \usepackage{minted}
 \usepackage{ulem}
+\usepackage{cmap}
 
 \hypersetup{colorlinks,linkcolor=blue,urlcolor=blue}
 
