--- a/160928/160928a.tex
+++ b/160928/160928a.tex
@@ -5,6 +5,7 @@
 \usepackage[english,russian]{babel}
 \usepackage{minted}
 \usepackage{ulem}
+\usepackage{cmap}
 
 \hypersetup{colorlinks,urlcolor=blue}
 
