--- a/160928/160928b.tex
+++ b/160928/160928b.tex
@@ -5,6 +5,7 @@
 \usepackage[english,russian]{babel}
 \usepackage{minted}
 \usepackage{ulem}
+\usepackage{cmap}
 
 \mode<presentation>{
 	\usetheme{CambridgeUS}
