--- a/161005/02-coll-02-iter.tex
+++ b/161005/02-coll-02-iter.tex
@@ -81,7 +81,7 @@ except StopIteration:  # Обработчик исключения StopIteration
 \end{minted}
 \end{frame}
 
-\begin{frame}[fragile]{Задание в классе}
+\begin{frame}[fragile]{Упражнение}
 	Напишите <<свою>> реализацию цикла \t{for}:
 \begin{minted}{python}
 def foreach(items, callback):
