161005: fix some overfulls; reorder some examples

--- a/161005/02-coll-01-dict.tex
+++ b/161005/02-coll-01-dict.tex
@@ -36,10 +36,18 @@ print(RangeMeasurer()[2:])     # ???
 	Все случаи надо либо разбирать руками, либо использовать функцию \t{slice.range()}.
 \end{frame}
 
-\begin{frame}[fragile]{Присваивание}
+\begin{frame}{Присваивание-1}
 	Оператор \t{=} в Python в общем случае перегрузить нельзя: \t{a = b}
 	всегда изменит значение \t{a} на \t{b} копированием ссылки.
-	Но можно перегрузить в частных случаях:
+
+	Но можно перегрузить в частных случаях, например, когда мы пишем \t{a.foo = b}
+	или \t{a["foo"] = b}.
+
+	В C++ наоборот: перегрузить можно только оператор \t{=} в общем случае,
+	поэтому возникают прокси-объекты (тут не рассматриваем).
+\end{frame}
+
+\begin{frame}[fragile]{Присваивание-2}
 \begin{minted}{python}
 class KeyPrepender:
     def __init__(self, backend, prefix):
@@ -56,6 +64,4 @@ print(cache["foo"])  # 10
 print(d)             # {'my_foo': 10}
 \end{minted}
 
-	В C++ наоборот: перегрузить можно только оператор \t{=} в общем случае,
-	поэтому возникают прокси-объекты (тут не рассматриваем).
 \end{frame}
