161005: add 05-patterns-01-types

--- a/161005/161005.tex
+++ b/161005/161005.tex
@@ -15,7 +15,7 @@
 
 \renewcommand{\t}[1]{\ifmmode{\mathtt{#1}}\else{\texttt{#1}}\fi}
 
-\title{Операторы, метаклассы, паттерны}
+\title{Мимикрия, метаклассы, паттерны}
 \author{Егор Суворов}
 \institute[СПб АУ]{Курс <<Парадигмы и языки программирования>>, подгруппа 3}
 \date[05.10.2016]{Среда, 5 октября 2016 года}
@@ -41,5 +41,6 @@
 \input{02-coll-02-iter}
 \input{03-cont}
 \input{04-meta}
+\input{05-patterns-01-types}
 
 \end{document}
