161005/01-op-03-comp: fix exercise

--- a/161005/01-op-03-comp.tex
+++ b/161005/01-op-03-comp.tex
@@ -114,7 +114,7 @@ class Natural:
     # ... ваш код здесь ...
 
 # Тесты:
-l = map(Natural, [5, 2, 3, 4, 1, 4])
+l = list(map(Natural, [5, 2, 3, 4, 1, 4]))
 print(Natural(2) + Natural(3))
 print(20 * Natural(100) + 5)
 print(sum(l))
