--- a/161005/03-cont.tex
+++ b/161005/03-cont.tex
@@ -44,7 +44,7 @@ f.__exit__()
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Задание}
+\begin{frame}[fragile]{Упражнение}
 	Напишите менеджер контекста для смены текущей папки (функция \t{os.chdir()}):
 \begin{minted}{python}
 class ChangeDir:
