--- a/161005/05-patterns-02-visitor.tex
+++ b/161005/05-patterns-02-visitor.tex
@@ -150,7 +150,7 @@ class IsSafeVisitor:
     def visit_cat(self, a):
         self.result = a.happiness() >= 3
     def visit_dog(self, a):
-        self.result a.tail_wagging()
+        self.result = a.tail_wagging()
 \end{minted}
 	\end{enumerate}
 \end{frame}
