Move 161005/04-meta to next lecture

--- a/161005/161005.tex
+++ b/161005/161005.tex
@@ -40,7 +40,7 @@
 \input{02-coll-01-dict}
 \input{02-coll-02-iter}
 \input{03-cont}
-\input{04-meta}
+%\input{04-meta}  % не успел
 \input{05-patterns-01-types}
 \input{05-patterns-02-visitor}
 
