Remove metaclasses from 161005's description

--- a/161005/161005.tex
+++ b/161005/161005.tex
@@ -15,7 +15,7 @@
 
 \renewcommand{\t}[1]{\ifmmode{\mathtt{#1}}\else{\texttt{#1}}\fi}
 
-\title{Мимикрия, метаклассы, паттерны}
+\title{Мимикрия, паттерны}
 \author{Егор Суворов}
 \institute[СПб АУ]{Курс <<Парадигмы и языки программирования>>, подгруппа 3}
 \date[05.10.2016]{Среда, 5 октября 2016 года}
