161012: extend draft to almost cover integers

--- a/161012/01-int-01-intro.tex
+++ b/161012/01-int-01-intro.tex
@@ -12,6 +12,7 @@
 		\item Но три тоже было, не прижилось.
 		\item Всё построено на основе бинарных функций <<И>>, <<ИЛИ>> и остальных (\textit{гейты})
 		\item Чем меньше гейтов "--- тем быстрее работает, тем меньше схема.
+		\item Числа надо складывать, вычитать, умножать, делить, сравнивать на равенство и меньше/больше.
 	\end{enumerate}
 \end{frame}
 
@@ -28,7 +29,8 @@
 			\t{0011 0000} & \pause 48 \\\hline\noalign{\pause}
 			\t{0011 0000} & \pause '0' \\\hline\noalign{\pause}
 			\t{1100 0011} & \pause \t{0xC3} \\\hline\noalign{\pause}
-			\t{1100 0011} & \pause \t{ret} \\\hline
+			\t{1100 0011} & \pause \t{ret} \\\hline\noalign{\pause}
+			\t{0110 1000} & \pause 22 \\\hline
 		\end{tabular}
 		\pause
 	\end{center}
@@ -37,4 +39,21 @@
 
 	Более того, представлений у одной и той же сущности может быть в
 	некотором смысле много (\t{0xC3}, 195, \t{ret}).
+\end{frame}
+
+\begin{frame}
+	Основные типы чисел: целое, фиксированная запятая, плавающая запятая.
+
+	Про строки и кодировки не говорим, там тоже довольно весело и интересно.
+	Но там больше про корректный выбор кодировки, про способы хранения не очень интересно
+	(и всё равно строится на целых числах).
+
+	Железо умеет целые числа и плавающую запятую (фиксированных запятых много).
+
+	Железо адресует байты в памяти (но не биты).
+	У каждого байта есть адрес, упрощённо считаем, что это просто целое неотрицательное число.
+	Поэтому про порядок бит внутри байта говорить бессмысленно "--- мы никак его не проверим, у нас есть только арифметические операции (будем рисовать \textit{младшие} биты справа, как будто нормальные числа).
+	А вот порядок байт (если штука занимает несколько байт) "--- уже содержательно (будем рисовать память слева направа: нулевой байт, первый...).
+
+	Откройте калькулятор или Python (\t{0b0100} и \t{int('1111', 2)}).
 \end{frame}
