--- a/161012/161012b.tex
+++ b/161012/161012b.tex
@@ -6,6 +6,7 @@
 \usepackage{minted}
 \usepackage{ulem}
 \usepackage{cmap}
+\usepackage{multirow}
 
 \hypersetup{colorlinks,linkcolor=blue,urlcolor=blue}
 
@@ -33,5 +34,8 @@
 \end{frame}
 
 \input{01-int-01-intro}
+\input{01-int-02-unsign}
+\input{01-int-03-sign}
+\input{01-int-04-order}
 
 \end{document}
