161012/01-int: add extra point in the trailing slide

--- a/161012/01-int-04-order.tex
+++ b/161012/01-int-04-order.tex
@@ -134,5 +134,7 @@
 			Читайте документацию, если работаете с чем-то на уровне байт!
 		\item
 			Если работаете с little-endian и меняете количество байт в числе "--- позаботьтесь о знаке.
+		\item
+			Количество бит/байт в числе важно при вычислениях, если есть либо дополнительный код, либо переполнения.
 	\end{enumerate}
 \end{frame}
