161012: add 02-real-{intro,ieee}

--- a/161012/161012b.tex
+++ b/161012/161012b.tex
@@ -37,5 +37,7 @@
 \input{01-int-02-unsign}
 \input{01-int-03-sign}
 \input{01-int-04-order}
+\input{02-real-01-intro}
+\input{02-real-02-ieee}
 
 \end{document}
