161012: finish draft of 02-real-ieee; add signed-zero.cpp

--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -15,15 +15,16 @@
 		\begin{tabular}{|r|c|c|c|}
 			\hline
 			Биты & 31 & 30-23 & 22-0 \\\hline
-			Тип & знак ($s$) & экспонента ($e$) & мантисса ($m$) \\\hline
+			& знак ($s$) & экспонента ($e$) & мантисса ($m$) \\\hline
 		\end{tabular}
 	\end{center}
 	Если $s=0$, то число положительное, иначе отрицательное.
-	Экспонента хранится не в дополнительном коде, а со сдвигом на 127 (т.е. $\t{0000 0000}=-127$, а $\t{0111 1111}=0$).
+	Экспонента хранится не в дополнительном коде, а со сдвигом на 127 (т.е. $\t{0000 0000}=-127$, а $\t{0111 1111}=0$)
+	и может принимать значения от $-127$ до $128$ (\textbf{не} от $-128$ до $127$).
 	Предполагается, что экспонента подобрана так, чтобы перед запятой был ровно один знак "--- единица.
 	А мантисса тогда хранит все остальные.
 
-	Итоговая формула:
+	Итоговая формула (для \textit{нормализованных} чисел):
 	\[
 		x = (-1)^s \cdot 2^{e-127} \cdot (1 + m \cdot 2^{-23})
 	\]
@@ -43,7 +44,83 @@
 		\begin{tabular}{|r|c|c|c|}
 			\hline
 			Биты & 31 & 30-23 & 22-0 \\\hline
-			Тип & \t{1} & $\underbrace{\t{100 0001 0}}_{e+128}$ & $\underbrace{\textit{101 110}0 0000 0000 0000 0000}_{m}$ \\\hline
+			& \t{1} & $\underbrace{\t{100 0001 0}}_{e+128}$ & $\underbrace{\textit{101 110}0 0000 0000 0000 0000}_{m}$ \\\hline
+		\end{tabular}
+	\end{center}	
+\end{frame}
+
+\begin{frame}{Денормализованные числа}
+	Какое наименьшее нормализованное число можно представить в таком формате?
+	Очевидно, при минимальной экспоненте (-127) и мантиссе.
+	Тогда самые маленькие числа таковы:
+	\begin{align*}
+		x &= 2^{-127} \cdot 1 \\
+		y &= 2^{-127} \cdot (1 + 1 \cdot 2^{-23}) \\
+		z &= 2^{-127} \cdot (1 + 2 \cdot 2^{-23}) \\
+		& \vdots \\
+	\end{align*}
+	Посчитаем что-нибудь:
+	\begin{align*}
+		x + y &= 2^{-127} \cdot (1 + 1 + 1 \cdot 2^{-23}) = \\
+		      &= 2^{-127} \cdot (2 + 1 \cdot 2^{-23}) = \\
+		      &= 2^{-126} \cdot (1 + 1 \cdot 2^{-24}) \approx \\
+		      &\approx 2^{-126} \cdot 1 \\
+		y - x &= 2^{-127} \cdot (1 + 1 \cdot 2^{-23} - 1) = \\
+		      &= 2^{-127} \cdot 1 \cdot 2^{-23} = 2^{-150}
+	\end{align*}
+	Округлять к $2^{-127}$ странно (и тогда бы получили, что $x-y=x$, но $x\neq x + y$).
+	Округлять к нулю тоже странно: $x \neq y$, но $x - y = 0$.
+
+	Так что вблизи нуля добавили \textit{денормализованные числа}, чтобы повысить точность и избежать таких проблем (ведь компилятор-то хочет оптимизировать).
+	Тогда эта проблема исчезает.
+\end{frame}
+
+\begin{frame}{Формат}
+	Скажем, что если экспонента состоит из нулей, то у нас денормализованное число:
+	\begin{center}
+		\begin{tabular}{|r|c|c|c|}
+			\hline
+			Биты & 31 & 30-23 & 22-0 \\\hline
+			Тип & знак ($s$) & нули & мантисса $m$ \\\hline
+		\end{tabular}
+	\end{center}
+	Тут мы уже считаем, что мантисса записана целиком, с учётом старшей единицы.
+	Формула:
+	\[
+		x = (-1)^s \cdot 2^{-12\textbf{6}} \cdot m \cdot 2^{-23}
+	\]
+	Тогда денормализованные числа лежат в диапазоне:
+	\[
+		2^{-126} \cdot 2^{-23} \le x \le 2^{-126} \cdot (2^{23}-1) \cdot2^{-23}
+	\]
+	А нормализованные (так как экспонента из нулей, т.е. $-127$, убита):
+	\[
+		2^{-126} \cdot 1 \le x
+	\]
+\end{frame}
+
+\begin{frame}
+	\begin{center}
+		\includegraphics[scale=0.75]{what-are-you-doing.jpg}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Все особенности IEEE-754}
+	Нормализованных чисел с экспонентой $-127$ не существует "--- это будут \textit{денормализованные} числа (см. следующий слайд).
+	Есть два нуля "--- по одному с каждым знаком (попробуйте их сравнить в Python, а потом на C++ на них поделить).
+	Сделано для некой внутренней консистентности.
+
+	Нормализованных чисел с экспонентой $128$ не существует "--- это будут либо $+\infty$, либо NaN (not a number).
+	Если мантисса из нулей "--- то бесконечность (в зависимости от знака), если есть хоть один не-ноль "--- NaN.
+	\begin{center}
+		\begin{tabular}{|r|c|c|c|c|}
+			\hline
+			Биты & 31 & 30-23 & 22-0 & Значение \\\hline
+			& \t{0} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $+\infty $\\\hline
+			& \t{1} & \t{111 1111 1} & \t{000 0000 0000 0000 0000 0000} & $-\infty $\\\hline
+			& \t{0} & \t{111 1111 1} & \t{000 1000 0110 0000 0000 0000} & \t{NaN} \\\hline
+			& \t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $+0$ \\\hline
+			& \t{0} & \t{000 0000 0} & \t{000 0000 0000 0000 0000 0000} & $-0$ \\\hline
 		\end{tabular}
 	\end{center}	
 \end{frame}
