--- a/161012/02-real-02-ieee.tex
+++ b/161012/02-real-02-ieee.tex
@@ -9,7 +9,7 @@
 
 	IEEE 754 сложнее предыдущих слайдов, чтобы выполнялись всякие полезные свойства и операции всегда были определены.
 	Например, есть $\pm \infty$ и \t{NaN} (Not a Number, получается при делении на ноль).
-	Разберём \textit{single-precision} (в C++/Java "--- \t{float}):
+	Разберём \textit{single-precision} (в C++/Java зовётся \t{float}; в Python под \t{float} используется \textit{double-precision}):
 
 	\begin{center}
 		\begin{tabular}{|r|c|c|c|}
@@ -73,6 +73,8 @@
 
 	Так что вблизи нуля добавили \textit{денормализованные числа}, чтобы повысить точность и избежать таких проблем (ведь компилятор-то хочет оптимизировать).
 	Тогда эта проблема исчезает.
+
+	Хотя всё равно можно получить underflow: \t{2 ** (-1074) / 2 * 2}.
 \end{frame}
 
 \begin{frame}{Формат}
