--- a/161012/161012b.tex
+++ b/161012/161012b.tex
@@ -39,5 +39,7 @@
 \input{01-int-04-order}
 \input{02-real-01-intro}
 \input{02-real-02-ieee}
+\input{02-real-03-practice}
+\input{02-real-04-round}
 
 \end{document}
