--- a/161012/01-int-01-intro.tex
+++ b/161012/01-int-01-intro.tex
@@ -6,19 +6,22 @@
 \end{frame}
 
 \begin{frame}
-	Упрощённое представление:
+	Упрощённое представление о происходящем в <<железе>>:
 	\begin{enumerate}
+		\item Любой сигнал (в том числе бит) "--- это напряжение на проводе.
 		\item Два уровня напряжения распознавать проще, чем три.
-		\item Но три тоже было, не прижилось.
-		\item Всё построено на основе бинарных функций <<И>>, <<ИЛИ>> и остальных (\textit{гейты})
+		\item Но три \href{https://ru.wikipedia.org/wiki/\%D0\%A1\%D0\%B5\%D1\%82\%D1\%83\%D0\%BD\%D1\%8C\_(\%D0\%BA\%D0\%BE\%D0\%BC\%D0\%BF\%D1\%8C\%D1\%8E\%D1\%82\%D0\%B5\%D1\%80)}{тоже было}, не прижилось.
+		\item Вся логика построена на основе бинарных функций <<И>>, <<ИЛИ>> и остальных (\textit{гейты})
 		\item Чем меньше гейтов "--- тем быстрее работает, тем меньше схема.
 		\item Числа надо складывать, вычитать, умножать, делить, сравнивать на равенство и меньше/больше.
 	\end{enumerate}
 \end{frame}
 
 \subsection{Типы данных}
-\begin{frame}
+\begin{frame}{Играем в игру}
 	Чему соответствует бинарная запись в таблице ниже?
+
+	Используйте калькулятор или Python (\t{0b0100}, \t{int('1111', 2)}).
 	\begin{center}
 		\pause
 		\begin{tabular}{|c|c|}
@@ -41,19 +44,30 @@
 	некотором смысле много (\t{0xC3}, 195, \t{ret}).
 \end{frame}
 
-\begin{frame}
-	Основные типы чисел: целое, фиксированная запятая, плавающая запятая.
+\begin{frame}{Ликбез-1}
+	\begin{itemize}
+		\item Основные типы чисел: целое, с фиксированной запятой, с плавающей запятой.
+		\item Про строки и кодировки не говорим, там тоже довольно весело и интересно.
+		\item Железо сейчас в основном поддерживает целые числа и с плавающей запятой.
+		\item Железо умеет получать доступ к байту в памяти по его \textit{адресу}.
+		\item Считаем, что адрес "--- это некоторое целое неотрицательное число.
+	\end{itemize}
+\end{frame}
 
-	Про строки и кодировки не говорим, там тоже довольно весело и интересно.
-	Но там больше про корректный выбор кодировки, про способы хранения не очень интересно
-	(и всё равно строится на целых числах).
-
-	Железо умеет целые числа и плавающую запятую (фиксированных запятых много).
-
-	Железо адресует байты в памяти (но не биты).
-	У каждого байта есть адрес, упрощённо считаем, что это просто целое неотрицательное число.
-	Поэтому про порядок бит внутри байта говорить бессмысленно "--- мы никак его не проверим, у нас есть только арифметические операции (будем рисовать \textit{младшие} биты справа, как будто нормальные числа).
-	А вот порядок байт (если штука занимает несколько байт) "--- уже содержательно (будем рисовать память слева направа: нулевой байт, первый...).
-
-	Откройте калькулятор или Python (\t{0b0100} и \t{int('1111', 2)}).
+\begin{frame}{Ликбез-2}
+	\begin{itemize}
+		\item
+			Железо не может адресовать что-то внутри байта (биты).
+		\item
+			Но мы можем выполнять какие-то арифметические операции с байтами.
+		\item
+			Про порядок бит внутри байта говорить бессмысленно "--- мы никак его не проверим, у нас есть только арифметические операции.
+		\item
+			Будем рисовать \textit{младшие}/\textit{менее значимые} биты справа, как будто нормальные числа):
+			\[ \t{0001 0010}_2 = 18_{10} \]
+		\item
+			Если какая-то конструкция занимает несколько байт подряд, то важно, в каком порядке они идут.
+		\item
+			Будем рисовать память слева направа: нулевой байт, первый...
+	\end{itemize}
 \end{frame}
