--- a/161012/01-int-03-sign.tex
+++ b/161012/01-int-03-sign.tex
@@ -5,16 +5,22 @@
 \end{frame}
 
 \begin{frame}
-	Можно сказать, что в первом бите храним знак (прямой код).
-	Тогда надо разбирать случаи в процессоре для всех операций и сравнения.
-	Появляются $+0$ и $-0$, так что ещё и сравнение на равенство сильно менять.
+	\begin{itemize}
+		\item
+			Можно сказать, что в первом бите храним знак, а в остальных "--- число, как раньше (\textit{прямой код}).
+		\item
+			Тогда надо разбирать случаи в процессоре для всех арифметических и логических операций.
+		\item
+			Появляются $+0$ и $-0$, так что ещё и сравнение на равенство сильно менять.
+	\end{itemize}
 
-	А можно сказать, что:
+	А можно сказать, что, $-x$ по определению "--- это такое $y$, что $x+y=0$.
+
+	Тогда вспоминаем, что мы уже живём по модулю 256:
 	\begin{align*}
-		x &= x + 256 \mod 256 \\
-		-56 &= -56 + 200 = 200 \mod 256
+		x &= x + 256 &\mod 256 \\
+		-56 &= -56 + 200 = 200 &\mod 256
 	\end{align*}
-	Самое главное свойство числа $-x$ "--- это $(-x)+x=0$!.
 \end{frame}
 
 \begin{frame}
@@ -26,13 +32,18 @@
 \begin{frame}
 	Алгебра говорит, что $-x$ "--- это \textit{обратный по сложению к $x$}.
 	В кольцах он есть.
+	Считаем, что обратный по сложению к $x$ в кольце $\mathbb{Z}/256\mathbb{Z}$ и есть элемент $-x$.
 
 	Мы только поменяли, как мы интерпретируем числа, но не их битовую запись:
-	\[
-		-56 + 100 = -56 + 256 + 100 = 200 + 100 = \t{1100 1000} + \t{0110 0100} = \t{1 0010 1100} = \t{0010 1100} = 44
-	\]
+	\begin{gather*}
+		\mod 256 \\
+		-56 + 100 = -56 + 256 + 100 = 200 + 100 = \\
+		= \t{1100~1000} + \t{0110~0100} = \t{1~0010~1100} = \t{0010~1100} = 44
+	\end{gather*}
 	Таким образом, сложение, вычитание, и даже умножение по-прежнему работают (спасибо алгебраистам, что доказали).
-	Упражнение: проверить.
+
+	Упражнение: проверить, что:
+	\[ a = b \mod 256 \rightarrow a \cdot x = b \cdot x \mod 256\]
 
 	С делением хуже:
 	\[
@@ -40,17 +51,41 @@
 	\]
 \end{frame}
 
-\begin{frame}{Стандартная конвенция}
-	Обычно разделяют отрезок ровно пополам: $[-128; 127]$.
-	Тогда по самому старшему биту определяют знак: 1 "--- отрицательное, 0 "--- неотрицательное.
-	Такая конвенция называется дополнительный код: отрицательное и положительно число в сумме дают нули или
+\begin{frame}{Дополнительный код}
+	\begin{enumerate}
+		\item Мы можем как угодно обозначить элементы кольца: какие-то назвать отрицательными числами, а какие-то "--- положительными.
+		\item Обычно разделяют отрезок ровно пополам: $[-128; 127]$.
+		\item Теперь по самому старшему биту можно определить знак: 1 "--- отрицательное, 0 "--- неотрицательное.
+	\end{enumerate}
+
+	Такая конвенция называется \textit{дополнительный код}: отрицательное и положительно число в сумме дают нули или
 	дополняют до степени двойки $2^8$.
 
-	Надо разбирать случаи в сравнении чисел и в делении с остатком (поэтому они в ассемблере появляются знаковые/беззнаковые).
+	\begin{enumerate}
+		\item
+			Надо разбирать случаи в сравнении чисел и в делении с остатком (поэтому они в ассемблере появляются знаковые/беззнаковые).
+		\item
+			Есть операция смены знака: инвертировать все биты и добавить единицу (инвертация бит "--- это вычитание из $\t{1111~1111}_2=255_{10}$).
+	\end{enumerate}
+\end{frame}
 
-	Операция смены знака: инвертировать все биты и добавить единицу, так как инвертация бит "--- вычитание из \t{1111 1111} (255).
+\begin{frame}{Упражнение}
+	Как представлены следующие числа в дополнительном коде?
 
-	Упражнение: как представлены -1, -128, 127, 128?
-	128 никак не представлено, есть некоторая асимметрия.
-	Что будет, если мы возьмём $-(-128)$?
+	\begin{center}
+		\pause
+		\begin{tabular}{|c|c|}
+			\hline
+			-1 & \pause \t{1111 1111} \\\hline\noalign{\pause}
+			-128 & \pause \t{1000 0000} \\\hline\noalign{\pause}
+			127 & \pause \t{0111 1111} \\\hline\noalign{\pause}
+			128 & \pause никак \\\hline
+		\end{tabular}
+		\pause
+	\end{center}
+	Что будет, если мы возьмём $-(-128)$? \pause
+	\begin{gather*}
+		-128=\t{1000~0000} \\
+		-(-128)=(\tilde{}\t{1000~0000})+1 = \t{0111~1111}+1 = \t{1000~0000} = 128 \\
+	\end{gather*}
 \end{frame}
